# wago-popup-dict

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  configure.ac
data/: wago_popup_dict.desktop
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  menu.ex  postinst  postrm.ex  preinst.ex  prerm.ex  wago-popup-dict.cron.d.ex  wago-popup-dict.default.ex  wago-popup-dict.doc-base.EX  wago-popup-dict.install  watch.ex
debian/source/: include-binaries
src/: Makefile.am  settings-dlg.ui  settingsdlg.vala  settingshandler.vala  sqlite3.h  sqlite3fts.vapi  sqlitedictionary.vala  unix-helpers.vala  wago.vala  wago_popup.vala  wago_popup_dict.vala  windows-helpers.vala  wordstem.vala
